fadeout message done, contacts overflow fixed

--- a/style.css
+++ b/style.css
@@ -75,7 +75,6 @@
     }
 	.submitButtonStyle 
 	{
-		  background: #ff8800;
 		  background-image: -webkit-linear-gradient(top, #0099cc, #33b5e5);
 		  background-image: -moz-linear-gradient(top, #0099cc, #33b5e5);
 		  background-image: -ms-linear-gradient(top, #0099cc, #33b5e5);
@@ -87,7 +86,6 @@
 		  text-shadow: 1px 1px 0px #000000;
 		  color: #ffffff;
 		  font-size: 20px;
-		  background: #3498db;
 		  padding: 10px 20px 10px 20px;
 		  border:none;
 		  text-decoration: none;
